sensordata api endpoint with projection option
- fetch all the sensordata inside the given time interval
- optional projection of the data by fields -> if no field parameter is provided, all the data fields are returned

e.g. /api/sensorData?end=1542401098247&field=vin&field=altitude&field=timestamp&field=carSpeed
